--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col backdown">
                         <div class="white-cont card p-5 ms-auto shad-10">
                             <div class="row g-0">
                                 <div class="col-md-4 d-flex justify-content-center align-items-center">
@@ -917,7 +917,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col backdown">
                         <div class="white-cont card p-5 ms-auto shad-10">
                             <div class="row g-0">
                                 <div class="col-md-4 d-flex justify-content-center align-items-center">
