Зроблено меший відступ у першій секції. Поправлені іконки та ховер на емейл в колонках.

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         </div>
 
     </div>
-    <div class="container bg-grad mt-5 pb-5">
+    <div class="container bg-grad pb-5">
         <div class="row">
             <div class="col-12 col-xxl-8 d-flex flex-column">
                 <div id="main_news_wrapper" class="d-flex align-items-center">
@@ -877,7 +877,7 @@
                                         <h5 class="card-title pb-2">Директор бібліотеки</h5>
                                         <p class="card-text m-0">Коцюк Юрій Анатолійович</p>
                                         <p class="card-text text-muted m-0">тел. (+380) 68-11-11-117</p>
-                                        <p class="card-text text-muted">email: yuriy.kotsiuk@oa.edu.ua</p>
+                                        <p class="card-text text-muted">email:<a class="maito" href="mailto:yuriy.kotsiuk@oa.edu.ua"> yuriy.kotsiuk@oa.edu.ua</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -894,7 +894,7 @@
                                         <h5 class="card-title pb-2">Директор бібліотеки</h5>
                                         <p class="card-text m-0">Коцюк Юрій Анатолійович</p>
                                         <p class="card-text text-muted m-0">тел. (+380) 68-11-11-117</p>
-                                        <p class="card-text text-muted">email: yuriy.kotsiuk@oa.edu.ua</p>
+                                        <p class="card-text text-muted">email:<a class="maito" href="mailto:yuriy.kotsiuk@oa.edu.ua"> yuriy.kotsiuk@oa.edu.ua</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -911,7 +911,7 @@
                                         <h5 class="card-title pb-2">Директор бібліотеки</h5>
                                         <p class="card-text m-0">Коцюк Юрій Анатолійович</p>
                                         <p class="card-text text-muted m-0">тел. (+380) 68-11-11-117</p>
-                                        <p class="card-text text-muted">email: yuriy.kotsiuk@oa.edu.ua</p>
+                                        <p class="card-text text-muted">email:<a class="maito" href="mailto:yuriy.kotsiuk@oa.edu.ua"> yuriy.kotsiuk@oa.edu.ua</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -928,7 +928,7 @@
                                         <h5 class="card-title pb-2">Директор бібліотеки</h5>
                                         <p class="card-text m-0">Коцюк Юрій Анатолійович</p>
                                         <p class="card-text text-muted m-0">тел. (+380) 68-11-11-117</p>
-                                        <p class="card-text text-muted">email: yuriy.kotsiuk@oa.edu.ua</p>
+                                        <p class="card-text text-muted">email:<a class="maito" href="mailto:yuriy.kotsiuk@oa.edu.ua"> yuriy.kotsiuk@oa.edu.ua</a></p>
                                     </div>
                                 </div>
                             </div>
