feat: upgrade bootstrap, fix layout

--- a/inside.html
+++ b/inside.html
@@ -157,7 +157,7 @@
         </div>
       </div>
 
-      <div id="navigation-wrapper" class="col-12 col-xl-4">
+      <div id="navigation-wrapper" class="col-12 col-xl-4 px-4">
         <div class="navigation bg-white shad-20 me-auto ms-auto">
           <div class="container d-inline-flex flex-column  justify-content-between text-white pt-4">
             <div class="pe-3 ps-3">
