--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Бібліотека</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
 
     <link rel="stylesheet" href="css/main.css">
@@ -142,7 +141,7 @@
             </div>
         </div>
     </div>
-    <div class="container mt-5">
+    <div class="container my-5 mb-xxl-0">
         <div class="row">
             <div class="col-12 col-xl-8">
                 <div class="wrapper fw-bold text-white">
@@ -467,7 +466,7 @@
                 </div>
             </div>
 
-            <div id="navigation-wrapper" class="col-12 col-xl-4">
+            <div id="navigation-wrapper" class="col-12 col-xl-4 ps-4">
                 <div class="navigation bg-grad shad-10 ms-auto">
                     <div class="container d-inline-flex flex-column  justify-content-between text-white pt-4">
                         <div class="pe-3 ps-3">
@@ -509,7 +508,7 @@
         <div class="row">
             <div class="col-12 col-xxl-8 d-flex flex-column">
                 <div id="main_news_wrapper" class="d-flex align-items-center">
-                    <div class="white-cont card mt-5 p-2">
+                    <div class="white-cont card mt-5 p-3">
                         <div class="row g-0">
                             <div id="main_news_image_wrapper" class="col-md-5 d-flex justify-content-center align-items-start">
                                 <a id="main_news_image" href="#">
@@ -595,7 +594,7 @@
 
                 </div>
             </div>
-            <div id="carousel-socials-wrapper" class="col-12 col-xxl-4 d-flex flex-column flex-wrap">
+            <div id="carousel-socials-wrapper" class="col-12 col-xxl-4 ps-xxl-4 d-flex flex-column flex-wrap">
                 <div id="carouselExampleIndicators2"
                      class="carousel slide schedule container me-0 white-cont d-flex flex-column justify-content-center mt-5 shad-20"
                      data-bs-ride="carousel">
@@ -867,7 +866,7 @@
                 <div id="contrib-wrapper" class="row row-cols-1 row-cols-sm-2 row-cols-xxl-2 g-4">
                     <div class="col">
 
-                        <div class="white-cont card p-5 ms-auto shad-10">
+                        <div class="white-cont card p-4 py-xxl-5 ms-auto shad-10">
                             <div class="row g-0">
                                 <div class="col-md-4 d-flex justify-content-center align-items-center">
                                     <img class="profile-img rounded-circle" src="img/147144.png" alt="...">
@@ -884,7 +883,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="white-cont card p-5 ms-auto shad-10">
+                        <div class="white-cont card p-4 py-xxl-5 ms-auto shad-10">
                             <div class="row g-0">
                                 <div class="col-md-4 d-flex justify-content-center align-items-center">
                                     <img class="profile-img rounded-circle" src="img/147144.png" alt="...">
@@ -901,7 +900,7 @@
                         </div>
                     </div>
                     <div class="col backdown">
-                        <div class="white-cont card p-5 ms-auto shad-10">
+                        <div class="white-cont card p-4 py-xxl-5 ms-auto shad-10">
                             <div class="row g-0">
                                 <div class="col-md-4 d-flex justify-content-center align-items-center">
                                     <img class="profile-img rounded-circle" src="img/147144.png" alt="...">
@@ -918,7 +917,7 @@
                         </div>
                     </div>
                     <div class="col backdown">
-                        <div class="white-cont card p-5 ms-auto shad-10">
+                        <div class="white-cont card p-4 py-xxl-5 ms-auto shad-10">
                             <div class="row g-0">
                                 <div class="col-md-4 d-flex justify-content-center align-items-center">
                                     <img class="profile-img rounded-circle" src="img/147144.png" alt="...">
@@ -936,7 +935,7 @@
                     </div>
                 </div>
             </div>
-            <div id="dop-res-wrapper" class="col-12  col-xxl-4">
+            <div id="dop-res-wrapper" class="col-12 col-xxl-4 ps-xxl-4">
                 <div class="dop-res container me-0 title-align white-cont shad-10">
                     <div class="d-inline-block pe-2 ps-2 mt-2">
                         <h4 class="text-center nav-line nav-color-green">ДОДАТКОВІ РЕСУРСИ</h4>
@@ -1078,9 +1077,7 @@
 </footer>
 <!-- Footer -->
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
-</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="js/parallax.js"></script>
 </body>
 
